Fixing code block word wrapping.

--- a/public/css/front-end/blog.styl
+++ b/public/css/front-end/blog.styl
@@ -152,6 +152,7 @@ h6, .h6
 
 .blog-main pre code
   color #93a1a1
+  word-wrap initial
 
   span
     white-space nowrap
